# xw-tab-ai

./: CLAUDE.md  README.md
.claude/: settings.local.json
sweep_autocomplete-0.1.1/: Modelfile.optimized  OLLAMA_SETUP.md  PERFORMANCE_OPTIMIZATION.md  PKG-INFO  pyproject.toml  quick_test.py  test_ollama_integration.py
sweep_autocomplete-0.1.1/sweep_autocomplete/: app.py  config.py
sweep_autocomplete-0.1.1/sweep_autocomplete-0.1.1/sweep_autocomplete/: app.py  cli.py
sweep_autocomplete-0.1.1/sweep_autocomplete-0.1.1/sweep_autocomplete.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
sweep_autocomplete-0.1.1/sweep_autocomplete-0.1.1/sweep_autocomplete/autocomplete/: next_edit_autocomplete.py  next_edit_autocomplete_retrieval.py
sweep_autocomplete-0.1.1/sweep_autocomplete-0.1.1/sweep_autocomplete/utils/: str_utils.py
sweep_autocomplete-0.1.1/sweep_autocomplete.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sweep_autocomplete-0.1.1/sweep_autocomplete/autocomplete/: llm_local.py
vscode-nes-main/: README.md  package.json  run_model.py  tsconfig.json
vscode-nes-main/.github/workflows/: ci.yml  release.yml
vscode-nes-main/src/api/: schemas.ts
vscode-nes-main/src/core/: config.ts
vscode-nes-main/src/editor/: inline-edit-provider.ts  syntax-highlight-renderer.ts
vscode-nes-main/src/telemetry/: autocomplete-metrics.ts  edit-tracking-anchor.ts
vscode-nes-main/test/: autocomplete-metrics.test.ts  edit-display-classifier.test.ts
vscode-nes-main/vscode-nes-main/: .vscodeignore  CLAUDE.md
vscode-nes-main/vscode-nes-main/test/: unified-diff.test.ts  (+1 more)
(+12 files in other folders)
