[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweep-autocomplete"
version = "0.1.1"
description = "Local next-edit autocomplete server powered by ollama"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Sweep AI" },
]
keywords = ["autocomplete", "code-completion", "ollama", "next-edit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "hypercorn>=0.17.0",
    "python-multipart>=0.0.6",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "regex>=2023.0",
    "brotli>=1.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sweep-autocomplete = "sweep_autocomplete.cli:main"

[project.urls]
Homepage = "https://github.com/sweepai/sweep-autocomplete"
Repository = "https://github.com/sweepai/sweep-autocomplete"

[tool.setuptools.packages.find]
include = ["sweep_autocomplete*"]
